<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dicoding Story App</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title_signup_page">Complete your details below</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="logo_dicoding">dicoding logo</string>
    <string name="title_welcome_page">Welcome to Dicoding!</string>
    <string name="message_welcome_page">Want to share your heartfelt stories? Do it on Dicoding!</string>
    <string name="add_story">Add Story</string>
    <string name="description">Enter Text Here</string>
    <string name="camera">Camera</string>
    <string name="event_image_desc">image</string>
    <string name="item_image">image</string>
    <string name="message_login_page">Please enter your details</string>
    <string name="title_login_page">Ready to upgrade your story?</string>
    <string name="storyappdicoding">StoryAppDicoding</string>
    <string name="camera_permission_denied">Permission Camera Denied</string>
    <string name="loggingout">Signing out…</string>
    <string name="story_name">Title of the story</string>
    <string name="no_stories">There are no stories available</string>
    <string name="gallery">Gallery</string>
    <string name="image_preview">Preview of the image</string>
    <string name="upload">Upload File</string>
    <string name="please_choose_a_picture_first">Select a picture before proceeding</string>
    <string name="please_add_description">Add a description before proceeding</string>
    <string name="story_uploaded_successfully">The story has been uploaded successfully</string>
    <string name="story_image">Image for the story</string>
    <string name="language">Select Language</string>
    <string name="map">Location Map</string>
    <string name="retry">Try Again</string>
    <string name="timeout">The operation timed out</string>
    <string name="include_location">Add the current location</string>
    <string name="location_denied">Access to location was denied</string>
    <string name="get_location">Successfully retrieved location</string>
    <string name="location_not_found">Current location could not be found</string>
    <string name="map_style_parsing_failed">Failed to process map style</string>
    <string name="can_t_find_style_error">Unable to locate the style. Error: %1$s</string>
    <string name="yes">Confirm</string>
    <string name="change_language">Switch Language</string>
    <string name="cancel">Abort</string>
    <string name="title_activity_maps">Map Activity</string>
    <string name="login">Sign In</string>
    <string name="camera_capture_canceled">camera canceled</string>
</resources>